Fixing Java 17 and review isses